--- a/index.html
+++ b/index.html
@@ -262,10 +262,10 @@
                 <h2><span>Book</span> Haven</h2>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repudiandae, atque? Lorem ipsum dolor sit amet.</p>
                 <div class="social_media">
-                    <a href="#"><i class="bi bi-facebook"></i></a>
-                    <a href="#"><i class="bi bi-twitter"></i></a>
-                    <a href=""><i class="bi bi-instagram"></i></a>
-                    <a href="#"><i class="bi bi-linkedin"></i></a>
+                    <a href="https://www.facebook.com/"><i class="bi bi-facebook"></i></a>
+                    <a href="https://twitter.com/home"><i class="bi bi-twitter"></i></a>
+                    <a href="https://www.instagram.com/"><i class="bi bi-instagram"></i></a>
+                    <a href="https://www.linkedin.com/"><i class="bi bi-linkedin"></i></a>
                 </div>
             </div>
             <div class="quick">
@@ -280,10 +280,10 @@
             <div class="policies">
                 <h3>Policies</h3>
                 <div class="policies_links">
-                    <a href="http://" target="_blank" rel="noopener noreferrer">Terms of Use</a>
-                    <a href="http://" target="_blank" rel="noopener noreferrer">Privacy Policy</a>
-                    <a href="http://" target="_blank" rel="noopener noreferrer">Contact Us</a>
-                    <a href="http://" target="_blank" rel="noopener noreferrer">FAQ</a>
+                    <a href="http://www.google.com/" target="_blank" rel="noopener noreferrer">Terms of Use</a>
+                    <a href="http://www.google.com/" target="_blank" rel="noopener noreferrer">Privacy Policy</a>
+                    <a href="http://www.google.com/" target="_blank" rel="noopener noreferrer">Contact Us</a>
+                    <a href="http://www.google.com/" target="_blank" rel="noopener noreferrer">FAQ</a>
                 </div>
             </div>
         </div>
